<resources>
    <string name="app_name">Notes</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="type_here">Type here …</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="voice">Voice</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_stars">******</string>
    <string name="enter">Enter</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_new_password_again">Re-enter New Password</string>
    <string name="confirm">CONFIRM</string>
</resources>
